# ChaosBF

./: .gitignore  ENVIRONMENT.md  GAUNTLET_REPORT.md  README.md  requirements.txt  rust-toolchain.toml  verify-environment.sh
chaosbf/: COMPLETE_SYSTEM_AND_ROADMAP.md  DEMO_OUTPUT.txt  FINAL_COMPLETE_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_SYSTEM_REPORT.md  PROJECT_SUMMARY.md  README.md  README_v2.md  UPGRADE_SUMMARY_V2.md  V2_FILES.txt  V31_UPGRADE_SUMMARY.md  V32_FINAL_SUMMARY.md  V33_UPGRADE_SUMMARY.md  V3_SUMMARY.md  V40_ALPHA_SUMMARY.md  V40_BETA_SUMMARY.md  V40_FINAL_SUMMARY.md  quickstart.sh
chaosbf/docs/: guide.md  specification.md  specification_v2.md
chaosbf/examples/: seed_programs.py
chaosbf/output/: anneal_quench_results.json  aurora_map_elites_grid.json  aurora_model.npz  aurora_model_metadata.json  autotune.json  autotune_results.json  demo_data.csv  (+6 more)
chaosbf_wasm/: .gitignore  ARCHITECTURE.md  BUILD_SUCCESS.md  Cargo.toml  Cargo_standalone.toml  PHASE23_PORT_STATUS.md  QUICKSTART.md  README.md  WASM_API.md  package.json  serve.sh
chaosbf_wasm/server/: mesh-server.js
chaosbf_wasm/src/: aurora.rs  critic.rs  edge_band.rs  island.rs  lib.rs  lib_standalone.rs  lyapunov.rs  ops.rs  repro.rs  rng.rs  state.rs  thermo.rs  wasm_api.rs
chaosbf_wasm/www/: chaosbf_wasm.wasm  gallery.html  gallery.js  index.html  index_standalone.html  mesh.js  renderer.js  smoke.html  smoke.js  telemetry.js  worker.js  worker_standalone.js
chaosbf_wasm/www/gpu/: ae_encode.wgsl  critic_ngram.wgsl  engine.js
chaosbf_wasm/www/pkg/: chaosbf_wasm.wasm
(+30 files in other folders)
